syntax = "proto3";

service Hangman {
	rpc NewGallow(GallowRequest) returns (Gallow){};
	rpc ListGallows(GallowRequest) returns (GallowArray){};
	rpc ResumeGallow(GallowRequest) returns (Gallow){};
	rpc SaveGallow(GallowRequest) returns (Gallow){};
	rpc GuessLetter(GuessRequest) returns (Gallow){};
}

message GallowRequest {
	int32 Id = 1;
	int32 RetryLimit=2;
}

message GallowArray {
	repeated Gallow Gallow=1;
}

message Gallow{
	int32 		Id = 1;
	int32 		RetryLimit=2;
	int32 		RetryLeft=3;
	string 		Word=4;
	string 		WordMasked=5;
	repeated 	GuessRequest IncorrectGuesses=6;
	bool 			Status=7;
}

message GuessRequest {
	int32 	GallowID = 1;
	string 	Letter = 2;
}
